1. Fixed the bug NIHVIVO-1803. 2. Changed the code/style that shows/hides collaborator links (co-pi & co-author n/ws) for a person, so that the code that will check if any publications/grants are attached to a person can manipulate visibility of these links.

--- a/productMods/css/visualization/visualization.css
+++ b/productMods/css/visualization/visualization.css
@@ -47,13 +47,9 @@ span.incomplete-data-holder,
     text-decoration: underline;
 }
 
-#coauthorship_link_container {
-    display: none;
-}
-
-#coauthorship_link_container,
-#coinvestigator_link_container {
+.collaboratorship-link-container {
     margin-top: 20px;
+    display: none;
 }
 
 .sparkline_text {
